Add jdk.incubator.vector module straight in sources